<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity7"
    android:background="@color/colorBlanco"
    android:padding="@dimen/margenActivity">

    <TextView
        android:id="@+id/tvNomUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margen_elemento_interfaz"
        android:text="@string/textNomUsuario"
        android:textColor="@color/colorAzul"/>

    <EditText
        android:id="@+id/etNomUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNomUsuario"
        android:layout_margin="@dimen/margen_elemento_interfaz" />

    <TextView
        android:id="@+id/tvContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNomUsuario"
        android:layout_margin="@dimen/margen_elemento_interfaz"
        android:text="@string/textContrasena"
        android:textColor="@color/colorNaranja"/>

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvContrasena"
        android:layout_margin="@dimen/margen_elemento_interfaz" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etContrasena"
        android:layout_margin="@dimen/margen_elemento_interfaz"
        android:text="@string/textSelectColor" />

    <Spinner
        android:id="@+id/spColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvColor"
        android:entries="@array/array_colores"/>

    <Button
        android:id="@+id/btnPresioname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spColor"
        android:text="@string/textActionPresioname"/>

    <Button
        android:id="@+id/btnReturnToPracticas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@+id/btnPresioname"
        android:text="@string/textActionRegresarPracticas"/>

</RelativeLayout>